--- a/highlight/templates/card_highlight.html
+++ b/highlight/templates/card_highlight.html
@@ -2,7 +2,7 @@
 {% load embed_video_tags %}
 
 <article class="bg-white rounded-lg border border-gray-200 hover:shadow-lg transition-shadow duration-300 overflow-hidden">
-  <div class="aspect-[16:9] relative overflow-hidden">
+  <div class="aspect-[16/9] relative overflow-hidden bg-gray-100">
 
     {% if highlight.is_embeddable %}
 
