feat: buat fitur delete highlight

--- a/highlight/templates/card_highlight.html
+++ b/highlight/templates/card_highlight.html
@@ -38,6 +38,9 @@
       <a href="{% url 'highlight:edit_highlight' highlight.pk %}" class="text-gray-600 hover:text-gray-700 text-sm transition-colors">
           Edit
       </a>
+      <a href="{% url 'highlight:delete_highlight' highlight.pk %}" class="text-red-600 hover:text-red-700 text-sm transition-colors">
+          Delete
+      </a>
     </div>
     
   </div>
