--- a/highlight/templates/highlight_detail.html
+++ b/highlight/templates/highlight_detail.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% load embed_video_tags %}
+{% include 'pop_up_rating.html' with highlight_id=highlight.pk %}
 
 {% block content %}
 <div class="bg-gray-50 w-full min-h-screen">
@@ -41,7 +42,7 @@
           <h1 class="text-2xl font-bold text-gray-900">{{ highlight.name }}</h1>
           <div class="flex-grow"></div>
           <div class="flex items-center space-x-2">
-            <button class="px-3 py-2 bg-gray-100 hover:bg-gray-200 text-gray-800 rounded-md text-sm font-semibold transition-colors">
+            <button id="rateButton" class="px-3 py-2 bg-gray-100 hover:bg-gray-200 text-gray-800 rounded-md text-sm font-semibold transition-colors">
               Rate
             </button>
             <button class="px-3 py-2 bg-gray-100 hover:bg-gray-200 text-gray-800 rounded-md text-sm font-semibold transition-colors">
