--- a/highlight/templates/card_highlight.html
+++ b/highlight/templates/card_highlight.html
@@ -1,7 +1,8 @@
 {% load static %}
 {% load embed_video_tags %}
 
-<article class="bg-white rounded-lg border border-gray-200 hover:shadow-lg transition-shadow duration-300 overflow-hidden">
+<!-- <article class="bg-gray rounded-lg border border-gray-200 hover:shadow-lg transition-shadow duration-300 overflow-hidden"> -->
+<article class="bg-gray-800 rounded-lg hover:shadow-lg transition-shadow duration-300 overflow-hidden">
   <div class="aspect-[16/9] relative overflow-hidden bg-gray-100">
 
     {% if highlight.is_embeddable %}
@@ -28,14 +29,14 @@
   </div>
 
   <div class="p-3">
-    <h3 class="text-lg font-bold text-gray-900 mb-2 line-clamp-2 leading-tight">
-      <a href="{% url 'highlight:show_highlight' highlight.pk %}" class="hover:text-gray-600 transition-colors">
+    <h3 class="text-lg font-bold text-white-500 mb-2 line-clamp-2 leading-tight">
+      <a href="{% url 'highlight:show_highlight' highlight.pk %}" class="hover:text-gray-300 transition-colors">
         {{ highlight.name }}
       </a>
     </h3>
 
     <div class="pt-2 border-t border-gray-100 flex justify-between items-center">
-      <a href="{% url 'highlight:edit_highlight' highlight.pk %}" class="text-gray-600 hover:text-gray-700 text-sm transition-colors">
+      <a href="{% url 'highlight:edit_highlight' highlight.pk %}" class="text-white-500 hover:text-white-600 text-sm transition-colors">
           Edit
       </a>
       <a href="{% url 'highlight:delete_highlight' highlight.pk %}" class="text-red-600 hover:text-red-700 text-sm transition-colors">
