--- a/highlight/templates/card_highlight.html
+++ b/highlight/templates/card_highlight.html
@@ -35,6 +35,7 @@
       </a>
     </h3>
 
+    {% if user.is_authenticated and user.is_staff %}
     <div class="pt-2 border-t border-gray-100 flex justify-between items-center">
       <a href="{% url 'highlight:edit_highlight' highlight.pk %}" class="text-white-500 hover:text-white-600 text-sm transition-colors">
           Edit
@@ -43,6 +44,7 @@
           Delete
       </a>
     </div>
+    {% endif %}
     
   </div>
 </article>
