--- a/highlight/templates/highlight_main.html
+++ b/highlight/templates/highlight_main.html
@@ -3,11 +3,13 @@
 
 {% block content %}
 <div class="w-full pt-16 min-h-screen">
-  <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8">
+  <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-2">
 
+    {% if user.is_authenticated and user.is_staff %}
     <a href="{% url 'highlight:add_highlight' %}" class="inline-flex items-center px-4 py-2 bg-gray text-gray-600 font-semibold outline outline-2 outline-gray-600 outline-offset-[-2px] rounded-md hover:bg-gray-600 hover:text-white transition-colors mb-4">
       Add Highlight
     </a>
+    {% endif %}
 
    <!-- Search and Filter Section -->
     <div class="mb-8 bg-gray rounded-lg border border-gray-200 p-4">
@@ -47,7 +49,7 @@
         
         <div class="col-span-1 md:col-span-2 lg:col-span-3">
           <div class="bg-gray rounded-lg border border-gray-200 p-12 text-center">
-            <h3 class="text-lg font-medium text-gray-900 mb-2">No Highlights found</h3>
+            <h3 class="text-lg font-medium text-gray-100 mb-2">No Highlights found</h3>
           </div>
         </div>
 
